Fixed issue where hovering of text inputs caused the bottom-border to appear and shift everything beneath it down 2px

--- a/public/stylesheets.css
+++ b/public/stylesheets.css
@@ -1652,6 +1652,7 @@ select.week {
   width: 100%;
   display: block;
   border: none;
+  border-bottom: 2px solid transparent;
   padding-left: 10px;
   outline: none;
 }
